hosts/midnight-runner/kubernetes/apps/base/authentik/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-outpost-from-whoami
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: whoami
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
