hosts/midnight-runner/kubernetes/apps/base/authentik/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  parentRefs:
  - name: main
    namespace: networking
    sectionName: https
  hostnames:
  - sso.jfp.one
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authentik-server
      port: 80
